--- a/xyginext/src/CMakeLists.txt
+++ b/xyginext/src/CMakeLists.txt
@@ -27,6 +27,7 @@ set(PROJECT_SRC
 
   ${PROJECT_DIR}/network/NetClient.cpp
   ${PROJECT_DIR}/network/NetConf.cpp
+  ${PROJECT_DIR}/network/NetEvent.cpp
   ${PROJECT_DIR}/network/NetHost.cpp
 
   ${PROJECT_DIR}/resources/FontResource.cpp
