add imgui rendering

--- a/xyginext/xyginext.vcxproj.filters
+++ b/xyginext/xyginext.vcxproj.filters
@@ -55,6 +55,9 @@
     <Filter Include="Source Files\network">
       <UniqueIdentifier>{9ab3d63c-1723-4262-ac9c-d512bc59df8d}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Source Files\imgui">
+      <UniqueIdentifier>{1f48ead6-dc67-47f4-98eb-280afc8c1aa6}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\core\App.cpp">
@@ -146,6 +149,18 @@
     </ClCompile>
     <ClCompile Include="src\network\NetPeer.cpp">
       <Filter>Source Files\network</Filter>
+    </ClCompile>
+    <ClCompile Include="src\imgui\imgui.cpp">
+      <Filter>Source Files\imgui</Filter>
+    </ClCompile>
+    <ClCompile Include="src\imgui\imgui_demo.cpp">
+      <Filter>Source Files\imgui</Filter>
+    </ClCompile>
+    <ClCompile Include="src\imgui\imgui_draw.cpp">
+      <Filter>Source Files\imgui</Filter>
+    </ClCompile>
+    <ClCompile Include="src\imgui\imgui_sfml.cpp">
+      <Filter>Source Files\imgui</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
