--- a/Demo/src/CMakeLists.txt
+++ b/Demo/src/CMakeLists.txt
@@ -2,4 +2,5 @@
 set(PROJECT_SRC
   ${PROJECT_DIR}/Game.cpp
   ${PROJECT_DIR}/GameState.cpp
-  ${PROJECT_DIR}/main.cpp)
+  ${PROJECT_DIR}/main.cpp
+  ${PROJECT_DIR}/Server.cpp)
