--- a/Demo/src/CMakeLists.txt
+++ b/Demo/src/CMakeLists.txt
@@ -3,4 +3,5 @@ set(PROJECT_SRC
   ${PROJECT_DIR}/Game.cpp
   ${PROJECT_DIR}/GameState.cpp
   ${PROJECT_DIR}/main.cpp
+  ${PROJECT_DIR}/MenuState.cpp
   ${PROJECT_DIR}/Server.cpp)
