--- a/Demo/Demo.vcxproj
+++ b/Demo/Demo.vcxproj
@@ -125,6 +125,7 @@
     <ClCompile Include="src\Game.cpp" />
     <ClCompile Include="src\GameState.cpp" />
     <ClCompile Include="src\main.cpp" />
+    <ClCompile Include="src\MenuState.cpp" />
     <ClCompile Include="src\Server.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -133,6 +134,7 @@
     <ClInclude Include="src\Game.hpp" />
     <ClInclude Include="src\GameState.hpp" />
     <ClInclude Include="src\MapData.hpp" />
+    <ClInclude Include="src\MenuState.hpp" />
     <ClInclude Include="src\PacketIDs.hpp" />
     <ClInclude Include="src\Server.hpp" />
     <ClInclude Include="src\StateIDs.hpp" />
