--- a/xyginext/xyginext.vcxproj
+++ b/xyginext/xyginext.vcxproj
@@ -124,6 +124,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="src\core\App.cpp" />
+    <ClCompile Include="src\core\ConfigFile.cpp" />
     <ClCompile Include="src\core\FileSystem.cpp" />
     <ClCompile Include="src\core\MessageBus.cpp" />
     <ClCompile Include="src\core\State.cpp" />
@@ -148,6 +149,7 @@
     <ClCompile Include="src\ecs\systems\SpriteRenderer.cpp" />
     <ClCompile Include="src\ecs\systems\TextRenderer.cpp" />
     <ClCompile Include="src\ecs\systems\UISystem.cpp" />
+    <ClCompile Include="src\graphics\SpriteSheet.cpp" />
     <ClCompile Include="src\imgui\imgui.cpp" />
     <ClCompile Include="src\imgui\imgui_demo.cpp" />
     <ClCompile Include="src\imgui\imgui_draw.cpp" />
@@ -159,13 +161,13 @@
     <ClCompile Include="src\network\NetPeer.cpp" />
     <ClCompile Include="src\resources\FontResource.cpp" />
     <ClCompile Include="src\resources\ShaderResource.cpp" />
-    <ClCompile Include="src\util\ConfigFile.cpp" />
     <ClCompile Include="src\util\Random.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\xyginext\Config.hpp" />
     <ClInclude Include="include\xyginext\core\App.hpp" />
     <ClInclude Include="include\xyginext\core\Assert.hpp" />
+    <ClInclude Include="include\xyginext\core\ConfigFile.hpp" />
     <ClInclude Include="include\xyginext\core\FileSystem.hpp" />
     <ClInclude Include="include\xyginext\core\Log.hpp" />
     <ClInclude Include="include\xyginext\core\Message.hpp" />
@@ -194,12 +196,12 @@
     <ClInclude Include="include\xyginext\ecs\systems\SpriteRenderer.hpp" />
     <ClInclude Include="include\xyginext\ecs\systems\TextRenderer.hpp" />
     <ClInclude Include="include\xyginext\ecs\systems\UISystem.hpp" />
+    <ClInclude Include="include\xyginext\graphics\SpriteSheet.hpp" />
     <ClInclude Include="include\xyginext\network\NetClient.hpp" />
     <ClInclude Include="include\xyginext\network\NetData.hpp" />
     <ClInclude Include="include\xyginext\network\NetHost.hpp" />
     <ClInclude Include="include\xyginext\resources\Resource.hpp" />
     <ClInclude Include="include\xyginext\resources\ShaderResource.hpp" />
-    <ClInclude Include="include\xyginext\util\ConfigFile.hpp" />
     <ClInclude Include="include\xyginext\util\Const.hpp" />
     <ClInclude Include="include\xyginext\util\Math.hpp" />
     <ClInclude Include="include\xyginext\util\Position.hpp" />
@@ -211,6 +213,7 @@
     <ClInclude Include="src\network\NetConf.hpp" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="include\xyginext\core\ConfigFile.inl" />
     <None Include="include\xyginext\ecs\Entity.inl" />
     <None Include="include\xyginext\ecs\EntityManager.inl" />
     <None Include="include\xyginext\ecs\Scene.inl" />
