--- a/xyginext/xyginext.vcxproj
+++ b/xyginext/xyginext.vcxproj
@@ -146,6 +146,7 @@
     <ClCompile Include="src\ecs\systems\CameraSystem.cpp" />
     <ClCompile Include="src\ecs\systems\CommandSystem.cpp" />
     <ClCompile Include="src\ecs\systems\InterpolationSystem.cpp" />
+    <ClCompile Include="src\ecs\systems\SpriteAnimator.cpp" />
     <ClCompile Include="src\ecs\systems\SpriteRenderer.cpp" />
     <ClCompile Include="src\ecs\systems\TextRenderer.cpp" />
     <ClCompile Include="src\ecs\systems\UISystem.cpp" />
@@ -182,6 +183,7 @@
     <ClInclude Include="include\xyginext\ecs\components\CommandTarget.hpp" />
     <ClInclude Include="include\xyginext\ecs\components\NetInterpolation.hpp" />
     <ClInclude Include="include\xyginext\ecs\components\Sprite.hpp" />
+    <ClInclude Include="include\xyginext\ecs\components\SpriteAnimation.hpp" />
     <ClInclude Include="include\xyginext\ecs\components\Text.hpp" />
     <ClInclude Include="include\xyginext\ecs\components\Transform.hpp" />
     <ClInclude Include="include\xyginext\ecs\components\UIHitBox.hpp" />
@@ -193,6 +195,7 @@
     <ClInclude Include="include\xyginext\ecs\systems\CameraSystem.hpp" />
     <ClInclude Include="include\xyginext\ecs\systems\CommandSystem.hpp" />
     <ClInclude Include="include\xyginext\ecs\systems\InterpolationSystem.hpp" />
+    <ClInclude Include="include\xyginext\ecs\systems\SpriteAnimator.hpp" />
     <ClInclude Include="include\xyginext\ecs\systems\SpriteRenderer.hpp" />
     <ClInclude Include="include\xyginext\ecs\systems\TextRenderer.hpp" />
     <ClInclude Include="include\xyginext\ecs\systems\UISystem.hpp" />
