add post processes to scenes

--- a/xyginext/src/CMakeLists.txt
+++ b/xyginext/src/CMakeLists.txt
@@ -38,6 +38,8 @@ set(PROJECT_SRC
 
   ${PROJECT_DIR}/graphics/SpriteSheet.cpp
 
+  ${PROJECT_DIR}/graphics/postprocess/PostProcess.cpp
+
   ${PROJECT_DIR}/imgui/imgui.cpp
   ${PROJECT_DIR}/imgui/imgui_demo.cpp
   ${PROJECT_DIR}/imgui/imgui_draw.cpp
