--- a/xyginext/xyginext.vcxproj.filters
+++ b/xyginext/xyginext.vcxproj.filters
@@ -213,6 +213,9 @@
     <ClCompile Include="src\graphics\postprocess\PostProcess.cpp">
       <Filter>Source Files\graphics\post process</Filter>
     </ClCompile>
+    <ClCompile Include="src\graphics\postprocess\PostChromeAb.cpp">
+      <Filter>Source Files\graphics\post process</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\xyginext\Config.hpp">
@@ -380,6 +383,9 @@
     <ClInclude Include="include\xyginext\graphics\postprocess\PostProcess.hpp">
       <Filter>Header Files\graphics\post process</Filter>
     </ClInclude>
+    <ClInclude Include="include\xyginext\graphics\postprocess\ChromeAb.hpp">
+      <Filter>Header Files\graphics\post process</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="include\xyginext\ecs\Entity.inl">
@@ -408,6 +414,9 @@
     </None>
     <None Include="include\xyginext\core\ConfigFile.inl">
       <Filter>Header Files\core</Filter>
+    </None>
+    <None Include="src\graphics\postprocess\PostChromeAb.inl">
+      <Filter>Header Files\graphics\post process</Filter>
     </None>
   </ItemGroup>
 </Project>
